# rain

./: .gitignore  CMakeLists.txt  README.md  build_and_run
include/: application.h  core.h  duck.h  entity.h  interactive_pool.h  particle.h  particle_system.h  pool.h  renderer.h  rigidbody_2d.h  utils.h
resources/shaders/: particle.fs  pool.fs  water.fs
src/: application.cpp  duck.cpp  interactive_pool.cpp  main.cpp  particle.cpp  particle_system.cpp  pool.cpp  rigidbody_2d.cpp
